# josephs-odd-builder

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
apps/job_ai_terminal_dashboard_example/: CMakeLists.txt  main.cpp
apps/job_ansi_examples/: CMakeLists.txt  basic.cpp  button_test.cpp  focus.cpp  items.cpp  mouse_click_test.cpp  rectangles.cpp  test_anchors.cpp  test_checkbox.cpp  test_gradient.cpp  test_grid_layout.cpp  test_label.cpp  test_linear_layout.cpp  test_radio_button.cpp  test_rectangle.cpp  window.cpp
apps/job_msg_gen/: CMakeLists.txt  main.cpp
apps/job_msg_gen_example/: CMakeLists.txt
apps/qt_protoplanetary_view/: CMakeLists.txt  Viewer.qml  main.cpp  main.qml  objectmodel.h  pointer-macros.h  property-macros.h  qppscomposition.cpp  qppscomposition.h  qppsdiskmodel.cpp  qppsdiskmodel.h  qppsengine.cpp  qppsengine.h  qppsparticle.cpp  qppsparticle.h  qppsvec3f.cpp  qppsvec3f.h  qppszones.cpp  qppszones.h
libs/: CMakeLists.txt
libs/job_ai/: .README.md.kate-swp  CMakeLists.txt  README.md  jobai.pc.in
libs/job_ansi/: CMakeLists.txt  job_ansi_attributes.cpp  job_ansi_attributes.h  job_ansi_cell.cpp  job_ansi_cell.h  job_ansi_cursor.cpp  job_ansi_cursor.h  job_ansi_grid.cpp  job_ansi_grid.h  job_ansi_line_display_mode.h  job_ansi_parser.cpp  job_ansi_parser.h  job_ansi_saved_buffer_state.h  job_ansi_screen.cpp  job_ansi_screen.h  job_ansi_scrollback.cpp  job_ansi_scrollback.h  jobansi.pc.in
libs/job_core/: CMakeLists.txt  aligned_allocator.h  crc32.cpp  crc32.h  endian_utils.h  io_base.h  job_assert.h  job_logger.cpp  job_logger.h  job_permissions.h  job_timer.cpp  job_timer.h  jobcore.pc.in  real_type.h  split_mix64.h
libs/job_crypto/: CMakeLists.txt  job_crypto_init.cpp  job_crypto_init.h  job_random.h  job_secure_mem.cpp  job_secure_mem.h  jobcrypto.pc.in
libs/job_cuda/: CMakeLists.txt  gemm_cuda.cu  jobcuda.pc.in
libs/job_io/: CMakeLists.txt  file_io.cpp  file_io.h  io_base.h  io_factory.cpp  io_factory.h  job_shared_memory.cpp  job_shared_memory.h  job_shared_memory_header.h  jobio.pc.in  mock_io.cpp  mock_io.h  pty_io.cpp  pty_io.h
libs/job_net/: CMakeLists.txt  isocket_io.cpp  isocket_io.h  job_http_header.cpp  job_http_header.h  job_iana.h  job_ipaddr.cpp  job_ipaddr.h  job_url.cpp  job_url.h  jobnet.pc.in  socket_error.h  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h  tcp_socket.cpp  tcp_socket.h  udp_socket.cpp  udp_socket.h  unix_socket.cpp  unix_socket.h
libs/job_science/: CMakeLists.txt  jobscience.pc.in
libs/job_serializer/: CMakeLists.txt  iserializer.cpp  iserializer.h  job_field.cpp  job_field.h  job_serializer_utils.cpp  job_serializer_utils.h  jobserializer.pc.in  reader.cpp  reader.h  runtime_object.cpp  runtime_object.h  schema.cpp  schema.h  spdx_helper.h  writer.cpp  writer.h
libs/job_simd/: CMakeLists.txt  jobsimd.pc.in  rounding_mode.h  simd_arm.h  simd_avx.h  simd_avx512.h  simd_avx_vinni.h  simd_for.h  simd_math.h  simd_provider.cpp  simd_provider.h  transpose.h
libs/job_threads/: CMakeLists.txt  async_event_loop.cpp  async_event_loop.h  job_semaphore.h  job_thread.cpp  job_thread.h  job_thread_pool.cpp  job_thread_pool.h  job_thread_watcher.cpp  job_thread_watcher.h  jobthreads.pc.in  task_queue.cpp  task_queue.h  thread_options.cpp  thread_options.h  thread_pool.cpp  thread_pool.h  thread_watcher.cpp  thread_watcher.h
libs/job_tui/: CMakeLists.txt  job_tui_anchors.h  job_tui_animation.h  job_tui_core_application.cpp  job_tui_core_application.h  job_tui_draw_context.cpp  job_tui_draw_context.h  job_tui_easing.h  job_tui_event.cpp  job_tui_event.h  job_tui_gradient.cpp  job_tui_gradient.h  job_tui_item.cpp  job_tui_item.h  job_tui_layout_engine.h  job_tui_mouse_area.cpp  job_tui_mouse_area.h  job_tui_object.cpp  job_tui_object.h  job_tui_rect.h  job_tui_style.h  jobtui.pc.in
libs/job_uart/: CMakeLists.txt  jobuart.pc.in  serial_info.cpp  serial_info.h  serial_io.cpp  serial_io.h  serial_manager.cpp  serial_manager.h  serial_settings.cpp  serial_settings.h  udev_monitor_thread.cpp  udev_monitor_thread.h
tests/: CMakeLists.txt  test_spin_till.h
tests/job_ai/: CMakeLists.txt  main.cpp  test_activation_math.cpp  test_ai_shm_integration.cpp  test_aligned_allocator.cpp  test_attention_integration.cpp  test_bh_adapter.cpp  test_cartpole.cpp  test_chat_bard.cpp  test_coach.cpp  test_dense_adapter.cpp  test_flash_attention.cpp  test_fmm_adapter.cpp  test_gemm.cpp  test_mlp.cpp  test_moe.cpp  test_rk4_adapter.cpp  test_runner.cpp  test_simple_bard.cpp  test_stencil_adapter.cpp  test_tensor_view.cpp  test_text_bard.cpp  test_token_base.cpp  test_token_bpe.cpp  test_token_motif.cpp  test_trainer.cpp  test_unix_genome.cpp  test_verlet_adapter.cpp  test_xor.cpp  test_xor_evolution.cpp
tests/job_ansi/: CMakeLists.txt  test_attributes.cpp  test_cell.cpp  test_charset_translator.cpp  test_color_utils.cpp  test_dispatch_csi.cpp  test_enums.cpp  test_grid.cpp  test_job_ansi_utils.cpp  test_parser.cpp  test_rgb_color.cpp  test_screen.cpp  test_scrollback.cpp  test_utf8_endcoder_decoder.cpp
tests/job_core/: CMakeLists.txt  test_logger.cpp  test_permissions.cpp  test_timer.cpp
tests/job_crypto/: CMakeLists.txt  test_job_crypto_init.cpp  test_job_random.cpp  test_job_secure_mem.cpp
tests/job_io/: CMakeLists.txt  test_fileio.cpp  test_http_header.cpp  test_io_factory.cpp  test_ipaddr.cpp  test_job_shared_memory.cpp  test_mockio.cpp  test_pty.cpp  test_serial_info.cpp  test_serial_manager.cpp  test_serial_settings.cpp  test_url.cpp
tests/job_net/: CMakeLists.txt  tcp_stack.cpp  test_http_header.cpp  test_ipaddr.cpp  test_loop.h  test_tcp_client_server.cpp  test_tcp_socket.cpp  test_udp_client_server.cpp  test_udp_socket.cpp  test_unix_client_server.cpp  test_unix_socket.cpp  test_url.cpp
tests/job_science/: CMakeLists.txt  test_barnes_hut.cpp  test_euler.cpp  test_verlet_integrator.cpp
tests/job_serializer/: CMakeLists.txt  main.cpp  test_emitter.cpp  test_emitter.h  test_iserializer.cpp  test_job_field.cpp  test_runtime_object.cpp  test_schema.cpp  test_serializer_utils.cpp  test_writier.cpp
(+492 files in other folders)
