add_subdirectory(job_core)
add_subdirectory(job_threads)
add_subdirectory(job_crypto)
add_subdirectory(job_io)
add_subdirectory(job_uart)
add_subdirectory(job_net)
add_subdirectory(job_serializer)
add_subdirectory(job_science)
add_subdirectory(job_ai)
add_subdirectory(job_ansi)
add_subdirectory(job_tui)
# CHECKPOINT: v1.0
